# objarc

./: AGENTS.md  README.md  api.py  arc.service  arc_api.service  classes.py  correlation.py  deploy.sh  main.py  package.json  pnpm-lock.yaml  pyproject.toml  rect_prompt.txt  run_local.sh  shan.ipynb  to_do.md  utils.py
api/: api.py  correlation.py  main.py  run_local.sh
docs/: arc_colors.md  create_webpage.md  discrete_lossless_arc.md  rectize_optimization.md  to_do.md
src/api/: api.sh  app.py  arc.service  deploy.sh  run_local.sh  schemas.py  services.py
src/backend/: __init__.py  analysis.py  constants.py  correlation.py  loaders.py  models.py  print_mat.py  rect.py  stats.py  utils.py
tests/: rectize_timings.txt  test_rectize.py
viz/: index.html  package-lock.json  package.json  pnpm-lock.yaml  prompts.md  tsconfig.app.json  vite.config.ts
viz/src/: App.tsx  main.tsx
viz/src/api/: client.ts
viz/src/components/: ColorGrid.tsx  Grid.tsx  GridCells.tsx  GridData.tsx  HeatmapDisplay.tsx  IOPair.tsx  Pairs.tsx  TaskView.tsx
viz/src/config/: api.ts
viz/src/types/: api.ts
