[project]
name = "objarc-backend"
version = "0.1.0"
description = "Core ARC data models and utilities for objarc."
readme = "../../README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3",
    "fastapi>=0.119",
    "pydantic>=2.7",
    "uvicorn>=0.38",
    "objarc-backend>=0.1.0",
    "matplotlib>=3.10.7",
    "scipy>=1.16.2",
]
